fix registration form UI

--- a/frontend/components.json
+++ b/frontend/components.json
@@ -6,9 +6,10 @@
   "tailwind": {
     "config": "tailwind.config.js",
     "css": "src/index.css",
-    "baseColor": "gray",
-    "cssVariables": true,
+    "baseColor": "neutral",
+    "cssVariables": false,
     "prefix": ""
+    
   },
   "aliases": {
     "components": "@/components",
